<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_read"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/read" />
        <item
            android:id="@+id/nav_mark"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/book_make" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/note" />
        <item
            android:id="@+id/nav_im"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="姊妹交流" />

    </group>

    <item android:title="其他">
    <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="分享" />
            <item
                android:id="@+id/nav_donate"
                android:icon="@drawable/ic_menu_share"
                android:title="捐赠" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="关于我们" />
    </group>
    </item>

</menu>
