<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000">

    <com.coressoft.breader.ui.view.ContentView
        android:id="@+id/bookpage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/read_dialog_bg"
        android:visibility="gone">

        <TextView
            android:id="@+id/title_bar_back"
            android:layout_width="32dip"
            android:layout_height="32dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:textColor="@android:color/white"
            android:background="@drawable/back" />



        <TextView
            android:id="@+id/btn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dip"
            android:background="@drawable/btn_add"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_read_bottom"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/read_dialog_bg"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_stop_read"
            style="@style/setting_dialog_button"
            android:layout_centerInParent="true"
            android:textSize="20dp"
            android:text="停止语音播放" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/rl_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="20dp"
                android:padding="20dp"
                android:background="?attr/colorPrimary"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="00.00%"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bookpop_bottom"
                android:baselineAligned="false"
                android:background="@color/read_dialog_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_pre"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/read_setting_pre"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        />

                    <!--<SeekBar-->
                        <!--android:id="@+id/sb_progress"-->
                        <!--android:layout_width="150dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_weight="1"-->
                        <!--android:gravity="center"-->
                        <!--android:max="10000"-->
                        <!--android:layout_gravity="center_vertical">-->
                    <!--</SeekBar>-->

                    <TextView
                        android:id="@+id/tv_next"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="@string/read_setting_next"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/text_style"
                        android:id="@+id/tv_directory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/directory"
                        android:gravity="center"
                        android:text="@string/read_setting_directory" />

                    <TextView
                        style="@style/text_style"
                        android:id="@+id/tv_dayornight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/dayornight"
                        android:gravity="center"
                        android:text="@string/read_setting_night" />

                    <TextView
                        style="@style/text_style"
                        android:id="@+id/tv_pagemode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/pagemode"
                        android:gravity="center"
                        android:text="@string/read_setting_pagemode" />

                    <TextView
                        style="@style/text_style"
                        android:id="@+id/tv_setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/setting"
                        android:gravity="center"
                        android:text="@string/read_setting_set" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
